@@ -8,10 +8,21 @@ else
   recipes.delete('footnotes')
 end
 
+if config['ban_spiders']
+  say_wizard "BanSpiders recipe running 'after bundler'"
+  after_bundler do
+    # ban spiders from your site by changing robots.txt
+    gsub_file 'public/robots.txt', /# User-Agent/, 'User-Agent'
+    gsub_file 'public/robots.txt', /# Disallow/, 'Disallow'
+  end
+else
+  recipes.delete('ban_spiders')
+end
+
 __END__
 
 name: Extras
-description: "Various extras including 'rails-footnotes' for development."
+description: "Various extras including 'ban_spiders' and 'rails-footnotes'."
 author: RailsApps
 
 category: other
@@ -21,3 +32,6 @@ config:
   - footnotes:
       type: boolean
       prompt: Would you like to use 'rails-footnotes' during development?
+  - ban_spiders:
+      type: boolean
+      prompt: Would you like to set a robots.txt file to ban spiders?
